--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Event Registration</title>
-  <script src="dist/about.js"></script>
+  <link rel="stylesheet" href="dist/ac5302d9d57efd706ce5.about.css">
 </head>
 <body>
   <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -38,9 +38,9 @@
     <div class="container">
       <h2>Event Location</h2>
       <div id="map" style="height:500px">
-
       </div>
     </div>
   </div>
+  <script src="dist/ac5302d9d57efd706ce5.about.js"></script>
 </body>
 </html>
