--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Event Registration</title>
-  <script src="dist/home.js"></script>
+  <link rel="stylesheet" href="dist/6e1aa47716c6c4b4f221.home.css">
 </head>
 <body>
   <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -81,5 +81,6 @@
       </form>
     </div>
   </div>
+  <script src="dist/6e1aa47716c6c4b4f221.home.js"></script>
 </body>
 </html>
