--- a/status.html
+++ b/status.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Event Registration</title>
-  <script src="dist/status.js"></script>
+  <link rel="stylesheet" href="dist/082301afe021753a3782.status.css">
 </head>
 <body>
   <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -49,5 +49,6 @@
       <canvas id="ageChart"></canvas>
     </div>
   </div>
+  <script src="dist/082301afe021753a3782.status.js"></script>
 </body>
 </html>
